--- a/example_config.json
+++ b/example_config.json
@@ -60,6 +60,10 @@
     "days_to_include_everything" : 7,
     "language" : "en",
     "fetch_cache_retry_count" : 4,
-    "empty_cache_cooldown_seconds" : 60
+    "empty_cache_cooldown_seconds" : 60,
+    "random_metacategory" : {
+      "deprioritized_categories" : ["top_headlines", "us_news", "generic"],
+      "suppression_percentage" : 70
+    }
   }
 }
